<resources>
    <string name="app_name">Tax Manager</string>
    <string name="star_map">Star Map</string>
    <string name="analysis">Analysis</string>
    <string name="around">Around</string>
    <string name="my_profile">My Profile</string>
    <string name="star_map_ap">AP</string>
    <string name="star_map_station">STATION</string>
    <string name="star_map_ap_note1">1–14 reprents channels</string>
    <string name="star_map_ap_note2">AP counts: %d</string>
    <string name="star_map_ap_note3">resprents AP</string>
    <string name="star_map_station_note1">0–50 represents distances</string>
    <string name="star_map_station_note2">STATION counts: %d</string>
    <string name="star_map_station_note3">represents STATION</string>
    <string name="star_map_button_text_start">Start</string>
    <string name="star_map_button_text_end">End</string>
    <string name="star_map_query_state">Checking Pi system state, please wait …</string>
    <string name="around_ap">Around AP</string>
    <string name="around_station">Around Station</string>
    <string name="around_specail_search">Specail Search</string>
    <string name="around_force_disconnected">Deauth state</string>
    <string name="around_force_connected">MITM state</string>
    <string name="around_blacklist">Blacklist</string>
    <string name="around_whitelist">Whitelist</string>
    <string name="around_ssid">SSID Keystore</string>
    <string name="around_webpages_search">Webpages Search</string>
    <string name="around_virtual_id">Virtual Identity</string>
    <string name="around_filterlist">Filterlist</string>
    <string name="around_devices_loading_hint">Loading …</string>
    <string name="around_station_name"><Data><![CDATA[%1$s<font color="#000000"><b>%2$s</b></font>]]></Data></string>
    <string name="around_station_local">(local)</string>
    <string name="task_search">Task search</string>
    <string name="settings">Settings</string>
    <string name="settings_alarm">Warning tone</string>
    <string name="settings_location">GPS</string>
    <string name="settings_force_disconnected_distance">Disconnected distance</string>
    <string name="settings_device_reboot">Reboot device</string>
    <string name="settings_sd_expand">Expand SD card</string>
    <string name="settings_online_upgrade">Upgrade online</string>
    <string name="settings_firmware_version">Firmware version</string>
    <string name="softeware_about">About</string>
    <string name="title_activity_around_detail">AroundDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="detail_info_channel">Channel</string>
    <string name="detail_info_station_number">Station</string>
    <string name="detail_info_distance_meter">Meter</string>
    <string name="detail_info_network_hint">Network</string>
    <string name="detail_info_virtual_id">Virtual ID</string>
    <string name="detail_action_force_disconnected">Deauth</string>
    <string name="detail_action_force_connected">MITM</string>
    <string name="detail_action_whitelist">Whitelist</string>
    <string name="detail_action_blacklist">Blacklist</string>
    <string name="ap_number_title">Station</string>
    <string name="detail_no_ssid">No SSID</string>
    <string name="action_fail">Operation is fail!</string>
    <string name="action_cancel_deauth_in_process">Canceling deauth…</string>
    <string name="action_cancel_mitm_in_process">Canceling mitm…</string>
    <string name="action_mitm_no_network_hint">No network connection,pleas try again later!</string>
    <string name="action_not_allow_on_local_device_hint">Forbidden deauth,mitm or add blacklist operations on local device !</string>
    <string name="device_detail">Detail</string>
    <string name="search_cancel">Cancel</string>
    <string name="devices_add">Add</string>
    <string name="devices_delete">Delete</string>
    <string name="devices_search_ap_hint">search mac/ssid name</string>
    <string name="devices_search_station_hint">search mac/station name</string>
    <string name="devices_search_force_disconnect_hint">search mac/ssid name/station name</string>
    <string name="devices_search_virtual_id_hint">search mac</string>
    <string name="devices_search_weburl_hint">search mac</string>
    <string name="devices_mitm_no_data">no date</string>
    <string name="wifi_map_pi_noresponding_hint">pi is not connected or not respond ? usb tether not actived?</string>
    <string name="wifi_map_location_edit_title">Edit Location</string>
    <string name="wifi_map_location_edit_hint">Please Input Location</string>
    <string name="wifi_map_location_button_cancel">Cancel</string>
    <string name="wifi_map_location_button_ok">OK</string>
    <string name="wifi_map_stop_progress_title">Stopping....</string>
    <string name="wifi_map_start_listener_fail">Start Listener fail !</string>
    <string name="wifi_map_stop_listener_fail">Stop Listener fail !</string>
    <string name="button_on_progress_title">Scanning…</string>
    <string name="distance">%s metres</string>
    <string name="station_number">Station: %d</string>
    <string name="positioning">Positioning…</string>
    <string name="choose_location">Choose Location</string>
    <string name="synchronize_data">Synchronize data</string>
    <string name="start_synchronize_data">Start synchronizing data</string>
    <string name="synchronize_data_success">Synchronous data to the Pi has been successful</string>
    <string name="debug_mode_enable">Debug mode enable</string>
    <string name="debug_mode_disable">Debug mode disable</string>
    <string name="debug_mode">Debug mode</string>
    <string name="longitude_latitude">longitude %1$s, latitude %2$s</string>
    <string name="virtual_id_messaging">Messaging</string>
    <string name="virtual_id_social">Social</string>
    <string name="virtual_id_others">Others</string>
    <string name="virtual_id_search_hint">"mac address is illegal , please input only contains 0–9 ,a-z ,A-Z characters and the length is 12 or seventeen characters that contains a colon  !! "</string>
    <string name="bottom_deauth_confirm">Cancle Deauth</string>
    <string name="bottom_mitm_confirm">Cancle Mitm</string>
    <string name="deauth_progress_hint">Deauth …</string>
    <string name="deauth_progress_success">Deauth success</string>
    <string name="mitm_progress_hint">Mitm…</string>
    <string name="mitm_progress_success">Mitm success</string>
    <string name="deauth_cancel_progress_hint">Cancel Deauth…</string>
    <string name="mitm_cancel_progress_hint">Cancel Mitm…</string>
    <string name="deauth_fail">Deauth fail !</string>
    <string name="mitm_fail">Mitm fail!</string>
    <string name="deauth_cancel_fail">Cancel Deauth fail!</string>
    <string name="mitm_cancel_fail">Cancel Mitm fail</string>
    <string name="debug_mode_change_hint">Application will restart,please waitting…</string>
    <string name="settings_orienteer_scan">Directional scanning</string>
    <string name="settings_orienteer_can_result_open_prompt">The directional scan has been turned on</string>
    <string name="settings_orienteer_can_result_closed_prompt">The directional scan has been turned off</string>
    <string name="settings_orienteer_can_islistener_prompt">The current program is running scan. Please close and try again</string>
    <string name="settings_sd_expand_prompt">Expand operation is running,it will spend few minutes,please wait a moment</string>
    <string name="settings_sd_expand_succeed">SD card space expanding successfully</string>
    <string name="settings_sd_expand_fail">SD card expand failed</string>
    <string name="settings_device_reboot_prompt">The device is restarting, please wait a moment</string>
    <string name="settings_device_reboot_succeed">Restart successfully</string>
    <string name="settings_device_reboot_fail">Restart failed</string>
    <string name="settings_export_all_data">Export all data</string>
    <string name="settings_star_map_list">List of star maps</string>
    <string name="warning_tone_black_white">Blacklist prompt tone</string>
    <string name="warning_tone_collision">Collision prompt</string>
    <string name="warning_tone_accompany">Accompanying note</string>
    <string name="warning_tone_black_white_open_prompt">The blacklist prompt has been turned on</string>
    <string name="warning_tone_black_white_closed_prompt">The blacklist prompt has been turned off</string>
    <string name="warning_tone_collision_open_prompt">The collision prompt has been turned on</string>
    <string name="warning_tone_collision_closed_prompt">The collision prompt has been turned off</string>
    <string name="warning_tone_accompany_open_prompt">The accompanying prompt has been turned on</string>
    <string name="warning_tone_accompany_closed_prompt">The accompanying prompt has been turned off</string>
    <string name="network_outage_distance_meter">meter</string>
    <string name="dialog_network_outage_distance_cancel">Cancel</string>
    <string name="dialog_network_outage_distance_confrim">confirm</string>
    <string name="ssid_not_exist_data_import_prompt">No import data</string>
    <string name="ssid_not_exist_data_export_prompt">No data was exported</string>
    <string name="star_map_task_list_title">List of star maps</string>
    <string name="title_ssid_pwd_library_manager">Batch cipher library management</string>
    <string name="title_ssid_pwd_library_manager_str">SSID password Library</string>
    <string name="import_ssid_pwd_library_file">Import password library file</string>
    <string name="export_ssid_pwd_library_file">Export password library file</string>
    <string name="give_ssid_pwd_library_history">Get the native SSID history</string>
    <string name="manual_input_str">Manual input</string>
    <string name="ssid_str">SSID:</string>
    <string name="ssid_input_hint">Please enter SSID number</string>
    <string name="ssid_pwd_type_str">Password:</string>
    <string name="ssid_pwd_type_hiht_str">Please input a password</string>
    <string name="ssid_manager_btn_str">confirm</string>
    <string-array name="ssid_spiner_array">
        <item> OPEN  </item>
        <item> WEP   </item>
        <item> WPA   </item>
        <item> WPA2  </item>
    </string-array>
    <string name="dialog_reminder_comfirm_str">confirm</string>
    <string name="synchronize_ssid_list_prompt">1.The SSID password library has been synchronized</string>
    <string name="synchronize_top_list_prompt">2.TopAP List is in sync</string>
    <string name="synchronize_filter_list_prompt">3.The filter list is in sync</string>
    <string name="export_workbook_name_device_list_prompt">1.The list of devices has been exported</string>
    <string name="export_workbook_name_dnd_list_prompt">2.The filter list is exported</string>
    <string name="export_workbook_name_identity_list_prompt">3.The virtual identity list is exported</string>
    <string name="export_workbook_name_white_black_list_prompt">4.The black and white list has been exported</string>
    <string name="export_workbook_name_white_ssid_list_prompt">5.The SSID list has been exported</string>
    <string name="export_workbook_name_white_task_list_prompt">6.The list of star maps has been exported</string>
    <string name="export_workbook_name_white_url_list_prompt">7.The Url list has been exported</string>
    <string name="export_workbook_name_white_topaplist_list_prompt">8.The TopAp List List has been exported</string>
    <string name="export_file_path">Export files to directories /sdcard/deter</string>
    <string name="szzfht">上传租房合同</string>
    <string name="fwznqk">房屋租赁情况</string>
    <string name="fwdz">房屋地址</string>
    <string name="barq">备案日期：</string>
    <string name="htznqzrq">租赁起止日期：</string>
    <string name="myzj">每月租金：</string>
    <string name="please_set">请选择</string>
    <string name="yuan">元</string>
    <string name="zhi">至</string>
</resources>