<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_reminder_shape_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/reminder_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_reminder_title_height"
        android:text="@string/synchronize_data_success"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_line_height_3px"
        android:background="@color/color_E6E6E6" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/dialog_reminder_content_min_height"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dialog_reminder_content_magin"
        android:paddingRight="@dimen/dialog_reminder_content_magin">

        <LinearLayout
            android:id="@+id/synchronize_data_part_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_reminder_content_magin"
            android:layout_marginTop="@dimen/dialog_reminder_content_magin"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/synchronize_ssid_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/synchronize_top_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/synchronize_filter_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/export_data_part_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_reminder_content_magin"
            android:layout_marginTop="@dimen/dialog_reminder_content_magin"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dialog_reminder_content_magin"
                android:text="@string/export_file_path"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_workbook_name_device_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_workbook_name_dnd_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_workbook_name_identity_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_workbook_name_white_black_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_workbook_name_white_ssid_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_workbook_name_white_task_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_workbook_name_white_url_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_workbook_name_white_topaplist_list_prompt"
                android:textColor="@color/color_333333"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_line_height_3px"
        android:background="@color/color_E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dialog_remind_buttom_layout_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reminder_comfirm"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:background="@drawable/dialog_reminder_message_confirm_btn_bottom_bg"
            android:text="@string/dialog_reminder_comfirm_str"
            android:textColor="@color/color_333333"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>