<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:icon="@drawable/warning_tone_black_white_icon"
        android:key="warning_tone_black_white"
        android:layout="@layout/layout_preference"
        android:defaultValue="true"
        android:title="@string/warning_tone_black_white" />

    <SwitchPreference
        android:icon="@drawable/warning_tone_collision_icon"
        android:key="warning_tone_collision"
        android:layout="@layout/layout_preference"
        android:title="@string/warning_tone_collision" />

    <SwitchPreference
        android:icon="@drawable/warning_tone_accompany_icon"
        android:key="warning_tone_accompany"
        android:layout="@layout/layout_preference"
        android:title="@string/warning_tone_accompany" />

</PreferenceScreen>