<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tabs_layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_around_background">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/around_item_margin">

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/around_ap"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_around_ap"
                    app:arounditle="@string/around_ap" />

                <View
                    android:layout_width="36px"
                    android:layout_height="0dp" />

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/around_station"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_around_station"
                    app:arounditle="@string/around_station" />
            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/around_item_margin">

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/around_special_search"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_special_search"
                    app:arounditle="@string/around_specail_search" />

                <View
                    android:layout_width="12dp"
                    android:layout_height="0dp" />

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/around_force_disconnected"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_force_disconnected"
                    app:arounditle="@string/around_force_disconnected" />
            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/around_item_margin">

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/around_force_connected"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_force_connected"
                    app:arounditle="@string/around_force_connected" />

                <View
                    android:layout_width="12dp"
                    android:layout_height="0dp" />

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/around_blacklist"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_blacklist"
                    app:arounditle="@string/around_blacklist" />
            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/around_item_margin">

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/around_whitelist"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_whitelist"
                    app:arounditle="@string/around_whitelist" />

                <View
                    android:layout_width="12dp"
                    android:layout_height="0dp" />

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/around_ssid"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_ssid"
                    app:arounditle="@string/around_ssid" />
            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/around_item_margin">

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/webpages_search"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_around_webpages"
                    app:arounditle="@string/around_webpages_search" />


                <View
                    android:layout_width="12dp"
                    android:layout_height="0dp" />

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/around_virtual_id"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_around_virtual_id"
                    app:arounditle="@string/around_virtual_id" />

            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/around_item_margin"
                android:paddingTop="@dimen/around_item_margin">

                <com.deter.TaxManager.view.AroundButton
                    android:id="@+id/filterlist"
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    app:aroundicon="@drawable/drawable_around_webpages"
                    app:arounditle="@string/around_filterlist" />


                <View
                    android:layout_width="12dp"
                    android:layout_height="0dp" />

                <com.deter.TaxManager.view.AroundButton
                    android:layout_width="@dimen/around_item_width"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>
